# FFmpeg_Android_Demo

./: README.md
demo4_videoDecode/: settings.gradle
demo4_videoDecode/app/: build.gradle
demo4_videoDecode/app/src/androidTest/java/com/example/demo4_videodecode/: ExampleInstrumentedTest.java
demo4_videoDecode/app/src/main/: AndroidManifest.xml
demo4_videoDecode/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo4_videoDecode/app/src/main/java/com/example/demo4_videodecode/: MainActivity.java
demo4_videoDecode/app/src/main/res/layout/: activity_main.xml
demo4_videoDecode/app/src/main/res/values/: strings.xml  themes.xml
demo4_videoDecode/app/src/main/res/values-night/: themes.xml
demo4_videoDecode/app/src/test/java/com/example/demo4_videodecode/: ExampleUnitTest.java
demo4_videoDecode/gradle/wrapper/: gradle-wrapper.properties
demo5_videoEncode/: settings.gradle
demo5_videoEncode/app/: build.gradle
demo5_videoEncode/app/src/androidTest/java/com/example/ffmpeg_videoencode/: ExampleInstrumentedTest.java
demo5_videoEncode/app/src/main/: AndroidManifest.xml
demo5_videoEncode/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo5_videoEncode/app/src/main/java/com/example/ffmpeg_videoencode/: MainActivity.java
demo5_videoEncode/app/src/main/res/layout/: activity_main.xml
demo5_videoEncode/app/src/main/res/values/: strings.xml  themes.xml
demo5_videoEncode/app/src/main/res/values-night/: themes.xml
demo5_videoEncode/app/src/test/java/com/example/ffmpeg_videoencode/: ExampleUnitTest.java
demo5_videoEncode/gradle/wrapper/: gradle-wrapper.properties
demo6_audioDecode/: settings.gradle
demo6_audioDecode/app/: build.gradle
demo6_audioDecode/app/src/androidTest/java/com/example/ffmpeg_audiodecode/: ExampleInstrumentedTest.java
demo6_audioDecode/app/src/main/: AndroidManifest.xml
demo6_audioDecode/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo6_audioDecode/app/src/main/java/com/example/ffmpeg_audiodecode/: MainActivity.java
demo6_audioDecode/app/src/main/res/layout/: activity_main.xml
demo6_audioDecode/app/src/main/res/values/: strings.xml  themes.xml
demo6_audioDecode/app/src/main/res/values-night/: themes.xml
demo6_audioDecode/app/src/test/java/com/example/ffmpeg_audiodecode/: ExampleUnitTest.java
demo6_audioDecode/gradle/wrapper/: gradle-wrapper.properties
demo7_audioEncode/: settings.gradle
demo7_audioEncode/app/: build.gradle
demo7_audioEncode/app/src/androidTest/java/com/example/ffmpeg_audioencode/: ExampleInstrumentedTest.java
demo7_audioEncode/app/src/main/: AndroidManifest.xml
demo7_audioEncode/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo7_audioEncode/app/src/main/java/com/example/ffmpeg_audioencode/: MainActivity.java
demo7_audioEncode/app/src/main/res/layout/: activity_main.xml
demo7_audioEncode/app/src/main/res/values/: strings.xml  themes.xml
demo7_audioEncode/app/src/main/res/values-night/: themes.xml
demo7_audioEncode/app/src/test/java/com/example/ffmpeg_audioencode/: ExampleUnitTest.java
demo7_audioEncode/gradle/wrapper/: gradle-wrapper.properties
demo8_byAudioTrack/: settings.gradle
demo8_byAudioTrack/app/: build.gradle
demo8_byAudioTrack/app/src/androidTest/java/com/example/ffmpeg_byaudiotrack/: ExampleInstrumentedTest.java
demo8_byAudioTrack/app/src/main/: AndroidManifest.xml
demo8_byAudioTrack/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
demo8_byAudioTrack/app/src/main/java/com/example/ffmpeg_byaudiotrack/: MainActivity.java  (+1 more)
demo8_byAudioTrack/app/src/main/res/layout/: activity_main.xml
demo8_byAudioTrack/app/src/main/res/values/: strings.xml  themes.xml
demo8_byAudioTrack/app/src/main/res/values-night/: themes.xml
demo8_byAudioTrack/gradle/wrapper/: gradle-wrapper.properties
demo9_byOpenSLES/: settings.gradle
demo9_byOpenSLES/app/: build.gradle
demo9_byOpenSLES/app/src/main/: AndroidManifest.xml
demo9_byOpenSLES/app/src/main/cpp/: CMakeLists.txt  FFmpegMusic.cpp  FFmpegMusic.h  native-lib.cpp
demo9_byOpenSLES/app/src/main/res/layout/: activity_main.xml
demo9_byOpenSLES/app/src/main/res/values/: strings.xml  themes.xml
demo9_byOpenSLES/app/src/main/res/values-night/: themes.xml
demo9_byOpenSLES/gradle/wrapper/: gradle-wrapper.properties
mydemo1_helloworld/: settings.gradle
mydemo1_helloworld/app/: build.gradle
mydemo1_helloworld/app/src/main/: AndroidManifest.xml
mydemo1_helloworld/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mydemo1_helloworld/app/src/main/res/values/: strings.xml  themes.xml
mydemo1_helloworld/app/src/main/res/values-night/: themes.xml
mydemo1_helloworld/gradle/wrapper/: gradle-wrapper.properties
mydemo2_videoPlay/app/: build.gradle
mydemo2_videoPlay/app/src/main/: AndroidManifest.xml
mydemo2_videoPlay/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mydemo2_videoPlay/app/src/main/res/layout/: activity_main.xml
mydemo2_videoPlay/app/src/main/res/values/: strings.xml  themes.xml
mydemo2_videoPlay/app/src/main/res/values-night/: themes.xml
mydemo2_videoPlay/gradle/wrapper/: gradle-wrapper.properties
mydemo3_videoPlay2/: settings.gradle
mydemo3_videoPlay2/app/: build.gradle
mydemo3_videoPlay2/app/src/main/: AndroidManifest.xml
mydemo3_videoPlay2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mydemo3_videoPlay2/app/src/main/res/values/: strings.xml  themes.xml
mydemo3_videoPlay2/app/src/main/res/values-night/: themes.xml
(+14 files in other folders)
